Fixing screen overflow
changed screens to p

--- a/style.css
+++ b/style.css
@@ -21,19 +21,27 @@ body{
     width: 370px;
     height: 100px;
     background-color: #CED4DA;
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    overflow: hidden;
 }
 
 #operatingscreen{
     text-align: right;
-    margin: 10px;
+    top:0;
+    right:0;
 }
 
 #inputscreen{
-    margin: 12px;
-    text-align: right;
-    font-size: xx-large;
+    position:absolute;
+    bottom:0;
+    right:0;
+    overflow: hidden;
+    font-size: 2.5rem;
+    white-space: nowrap;
+    word-wrap: break-word;
+    margin-top: 0;
+    margin-bottom: 5px;
+    margin-right: 5px;
 }
 
 #buttoncontainer{
